[project]
authors = [{ name = "Florian Felten", email = "florian.felten@uni.lu" }]
license = { text = "MIT" }
requires-python = "<3.13,<4.0,>=3.9"
dependencies = [
  "gymnasium>=0.28.1",
  "pettingzoo>=1.24.0",
  "numpy",
  # "torch<2.0,>=1.13",
  "pygame<3.0,>=2.5",
  "pyopengl==3.1.6",
  "cflib<1.0,>=0.1",
  "jax<1.0,>=0.4",
  "jaxlib<1.0,>=0.4",
  "flax<1.0,>=0.6",
  "optax<1.0,>=0.1",
  "chex<1.0,>=0.1",
  "orbax-checkpoint>=0.3",
  "matplotlib<4.0,>=3.7",
  "distrax>=0.1.5",
  "jax-dataclasses<2.0,>=1.5",
  "pymoo<1.0,>=0.6",
  "mplcursors<1.0.0,>=0.5.2",
  "supersuit<4.0.0,>=3.9.0",
  "tqdm<5.0.0,>=4.66.1",
  "pandas<3.0.0,>=2.0.3",
  "expt<1.0.0,>=0.4.2",
  "typing-extensions>=4.14.0",
]
name = "crazy-rl"
version = "0.0.1"
description = "Environments and learning code for doing (MOMA)RL with CrazyFlies."
readme = "README.md"
keywords = [
  "Reinforcement Learning",
  "Multi-Objective",
  "Multi-Agent",
  "RL",
  "AI",
  "gymnasium",
  "pettingzoo",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[dependency-groups]
dev = ["pre-commit<3.0,>=2.20", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crazy_rl"]

# Linting, testing, ... ########################################################
[tool.black]
safe = true
line-length = 127
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
src_paths = ["crazy_rl"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3
